# Rigi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  cross_platform.md  optimization.md  textual_feature.md
.github/workflows/: build.yml  pr-summary.yml  pr.yml
examples/: 01_minimal.py  02_dashboard.py  03_todo.py  04_file_browser.py  05_system_monitor.py  06_notes.py  07_multi_theme.py  08_platform_features.py  09_tab_group.py  09_vertical_tabs.py  10_action_menu.py
src/rigi/: __init__.py
src/rigi/commands/: __init__.py  command.py  parser.py  provider.py  registry.py
src/rigi/core/: __init__.py  _cmd_handlers.py  app.py  console.py  dev_commands.py  log_store.py  platform.py  settings_manager.py  types.py
src/rigi/css/: default.tcss
src/rigi/layout/: __init__.py  pane.py
src/rigi/screens/: __init__.py  action_menu.py  hamburger.py  help.py  settings.py
src/rigi/themes/: __init__.py  base.py  dark.py  light.py  monokai.py  nord.py
src/rigi/widgets/: __init__.py  action_menu.py  border_frame.py  bottom_panel.py  checkbox.py  content_area.py  gauge.py  hamburger_menu.py  hamburger_overlay.py  help_overlay.py  help_panel.py  image.py  mouse.py  notifications.py  palette.py  settings_overlay.py  settings_screen.py  sidebar.py  statusbar.py  tab_group.py  terminal_bar.py  vertical_tabs.py
tests/: conftest.py  test_basic.py  test_checkbox.py  test_commands.py  test_help_system.py  test_log_store.py  test_loggers.py  test_resize.py  test_terminal.py  test_widgets.py
